--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@ Class name automatically added to element */
   </video>
   <div class="card-img-overlay h-100">
     <div class="container h-100 justify-content-center text-center align-items-center d-flex" style="">
-      <div style="" data-aos="fade-up" >
+      <div style="" data-aos="fade-up">
         <!-- position-absolute 쓰면 fade up 불가 -->
         <h1 class="Title_1 text-white">당신이 원하는 모든 것, AI로 이루어 드립니다</h1>
 
@@ -89,31 +89,32 @@ Class name automatically added to element */
 </div>
 
 
-<div class='isBg-1' style = 'background: linear-gradient(154.46deg, rgba(203, 186, 255, 0) 51.73%, #CBBAFF 89.37%), #FFFFFF;' >
-  
+<div class='isBg-1'
+  style='background: linear-gradient(154.46deg, rgba(203, 186, 255, 0) 51.73%, #CBBAFF 89.37%), #FFFFFF;'>
 
 
-    <div class="container col-md-8 col-12 mt-4">
+
+  <div class="container col-md-8 col-12 pt-4">
 
 
-      <section class="py-5 text-center container navbar-example" style='height:100vh;'>
-        <div class="row py-md-5 mt-5">
-          <div class="mx-auto">
-            <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
-            <p class="lead text-muted" data-aos="fade-up" style='margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
-            <button id='goDown' class='border-0 bg-transparent'><i class="angle down icon"></i></button>
-          </div>
+    <section class="py-5 text-center container navbar-example" style='height:100vh;'>
+      <div class="row py-md-5 mt-5">
+        <div class="mx-auto">
+          <p class="better" data-aos="fade-up">BETTER DATA, FUTURE FOR AI</p> <br />
+          <p class="lead text-muted" data-aos="fade-up" style='margin-bottom: 8vw;'>데이터가 주도하는 인공지능의 미래</p>
+          <button id='goDown' class='border-0 bg-transparent'><i class="angle down icon"></i></button>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="">
-        <div class="row" id=''>
-          <div class="text-center Gray_2 SubTitle_1 pb-5 mb-5" id='down'>Our Technology </div>
-        </div>
+    <section id="">
+      <div class="row" id=''>
+        <div class="text-center Gray_2 SubTitle_1 pb-5 mb-5" id='down'>Our Technology </div>
+      </div>
 
-        <div class='row'>
-          <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
-            <img src="img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+      <div class='row'>
+        <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+          <img src="img/home/-2.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
             더하는 AI Human">
 
           <div class=" mb-4 card-img-overlay  c1-img" id='tech' style='height: 70vh;'>
@@ -121,9 +122,10 @@ Class name automatically added to element */
               <div class='row g-0 h-100'>
                 <div class='col d-flex flex-column '>
                   <p class=" c1-title Title_1_eng mb-0 gray_0">Data Warehouse</p>
-                  <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                  <!-- <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a> -->
                   <div class='mt-auto '>
-                    <p class="Title_3 c1 transition hidden">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어  합성데이터를 제공하고, On-premise와 SaaS를 동시에 지원하는 개방적이고 유연한 확장을 지원합니다.</p>
+                    <p class="Title_3 c1 transition hidden">CN.AI Data Warehouse 플랫폼은 자동화 된 ML 개발환경과 더불어 합성데이터를 제공하고,
+                      On-premise와 SaaS를 동시에 지원하는 개방적이고 유연한 확장을 지원합니다.</p>
                   </div>
                 </div>
                 <div class='col align-self-end'>
@@ -135,13 +137,13 @@ Class name automatically added to element */
               </div>
             </div>
           </div>
-          </div>
         </div>
-        <div class="row gy-3">
-          <div class="col-md-6 col-12 ps-0 pe-md-3 pe-0">
+      </div>
+      <div class="row gy-3">
+        <div class="col-md-6 col-12 ps-0 pe-md-3 pe-0">
 
-            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
-              <img src="img/home/-1.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+          <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+            <img src="img/home/-1.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
               더하는 AI Human">
 
             <div class=" mb-4 card-img-overlay  c2-img" id="" style="height: 100%">
@@ -151,7 +153,8 @@ Class name automatically added to element */
                     <p class=" c2-title Title_1_eng mb-0 gray_0">Future AI를 위한 데이터 합성 솔루션</p>
                     <a href="/coretech#box2" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
                     <div class="mt-auto ">
-                      <p class="Title_3 c2 transition hidden">empowers super-realistic, biologically-meaningful synthetic data. 데이터 공급이 어려웠던 다양한 분야에 AI를 위한 고품질의 데이터를 무한 공급합니다. </p>
+                      <p class="Title_3 c2 transition hidden">empowers super-realistic, biologically-meaningful
+                        synthetic data. 데이터 공급이 어려웠던 다양한 분야에 AI를 위한 고품질의 데이터를 무한 공급합니다. </p>
                     </div>
                   </div>
                   <div class="col align-self-end">
@@ -164,209 +167,207 @@ Class name automatically added to element */
               </div>
             </div>
 
-            </div>
-
           </div>
-          <div class="col-md-6 col-12 pb-0">
-            <div class="row">
-              <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
-                <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
+
+        </div>
+        <div class="col-md-6 col-12 pb-0">
+          <div class="row">
+            <div class="mb-4 card w-100 border-0 rounded-0 p-0" id="">
+              <img src="img/home/0.png" class="card-img rounded-0" alt="비즈니스에 가능성을 
               더하는 AI Human">
-                <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4 rounded-0">
-                  <div class="row g-0 h-100">
-                    <div class="col-md-7 d-flex flex-column ">
-                      <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
-                        더하는 AI Human</p>
-                      <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
-                      <div class="mt-auto ">
-                        <p class="Title_3 c3 transition hidden" style = 'font-size: large;'>고도화된 음성 합성 TTS,영상 생성 LipSync, 얼굴합성Faceswap으로 실제 인간과 구분할 수 없는 수준의 가상인간을 만듭니다. 가상인간 생성툴 STUDIO를 통해 언택트 시대의 소통을 혁신합니다.</p>
-                      </div>
-                    </div>
-                    <div class="col align-self-end">
-                      <button onclick="showUp($(this).attr('id'),'home')" id="c3"
-                        class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
-                        <img class="btn-sm-1" src="img/icon/00 more-dark.png">
-                      </button>
+              <div class="card-img-overlay container c3-img d-flex flex-column h-100 p-4 rounded-0">
+                <div class="row g-0 h-100">
+                  <div class="col-md-7 d-flex flex-column ">
+                    <p class=" c3-title Title_1_eng mb-0 gray_0">비즈니스에 가능성을
+                      더하는 AI Human</p>
+                    <a href="/coretech" class="Body_1 Gray_1 text-mute">더 알아보기 <i class="angle right icon"></i></a>
+                    <div class="mt-auto ">
+                      <p class="Title_3 c3 transition hidden" style='font-size: large;'>고도화된 음성 합성 TTS,영상 생성 LipSync,
+                        얼굴합성Faceswap으로 실제 인간과 구분할 수 없는 수준의 가상인간을 만듭니다. 가상인간 생성툴 STUDIO를 통해 언택트 시대의 소통을 혁신합니다.</p>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class=" " id=""
-                style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; ">
-                <div class="container d-flex flex-column h-100 p-4">
-                  <div class="row g-0 h-100">
-                    <div class="col-7 d-flex align-items-center">
-                      <p class=" Title_1_eng mb-0 text-white">AI Human의 베타 서비스를
-                        신청해보세요!</p>
-
-                    </div>
-                    <div class="col align-self-end">
-                      <button 
-                        class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
-                        <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
-                      </button>
-                    </div>
+                  <div class="col align-self-end">
+                    <button onclick="showUp($(this).attr('id'),'home')" id="c3"
+                      class="align-items-baseline border-0 Title_3 bg-transparent float-end c-btn c3-btn">
+                      <img class="btn-sm-1" src="img/icon/00 more-dark.png">
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
+          <div class="row">
+            <div class=" " id=""
+              style="background: linear-gradient(108.12deg, #7E53FF 14.18%, rgba(126, 83, 255, 0) 43.27%), #5A54F5; ">
+              <div class="container d-flex flex-column h-100 p-4">
+                <div class="row g-0 h-100">
+                  <div class="col-7 d-flex align-items-center">
+                    <p class=" Title_1_eng mb-0 text-white">AI Human의 베타 서비스를
+                      신청해보세요!</p>
 
-
-      <section class="ourUseCases">
-        <div class="subTitle_1 Gray_3" style='margin-top: 30vh;'>
-          Our Use Cases
-        </div>
-        <p class=' Title_2 my-4 pb-4 Gray_1'>
-          데이터 합성 솔루션이 가져올 변화
-        </p>
-      </div>
-
-
-
-        <div class="swiper mySwiper" style="
-        height: 70vh;
-    ">
-          <div class="swiper-wrapper">
-
-            {% set say1 = [{ title: "Medical 의료 분야.", title2: "일반적으로 구하기 어려운 희귀 병변 데이터를 생성하고 정밀하게 탐지합니다.",
-            description: "개인 민감정보 활용 이슈에서 자유로운 의료 합성데이터를 만듭니다.
-            합성데이터는 학습 데이터의 부족 문제를 해결해 AI 진단의 정확도를 높입니다." },
-            { title: "AI Human 가상 인간.", title2: "AI Human을 통해 가치를 전달하고, 언택트 시대의 소통을 혁신합니다.",
-            description: "고도화된 영상/음성 합성기술로 실제 인간과
-            구분할 수 없는 수준의 가상인간을 만듭니다." } ,
-            {title: "Automotive 자율주행", title2: "보다 현실에 가까운 학습데이터로
-            자율주행의 안전성을 높입니다. ", description: "도로/주차 운전 시, 일상에서 수집하기 어려운
-            여러 상황을 학습데이터로 만듭니다."}]
-            %}
-            {% for item in say1 %}
-            <div class="swiper-slide ">
-              <div class="row gx-0 justify-content-between"
-                style="background: linear-gradient(96.66deg, rgba(255, 255, 255, 0) -8.55%, rgba(255, 255, 255, 0.8) 159.35%), #5A54F5;">
-                <div class="col-md-3 col-12 Gray_5 offset-md-2" style='
-            
-          '>
-                  <p class="Body_1  mt-5 ">{{ item.title }}</p>
-                  <p class="Title_2 ">{{ item.title2 }} </p>
-                  <p class="Body_1 ">{{ item.description }}</p>
-                </div>
-                <div class="col-md-5 col-12 mt-3 mt-md-0">
-                  <img src="/img/home/{{ loop.index }}.png" class="img-fluid w-100" alt="...">
+                  </div>
+                  <div class="col align-self-end">
+                    <button class="align-items-baseline border-0 Title_3 bg-transparent float-end mb-3">
+                      <img class="btn-sm-1" src="img/icon/02 arrow-right-circle-dark.png">
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
-
-            {% endfor %}
-
-          </div>
-          <div class="swiper-pagination position-absolute start-50 translate-middle-x Label Gray_1" style="bottom:7vh;">
           </div>
         </div>
-     
-      </section>
-
- 
-
-
-
-    <section id='partners' style="
-    margin-top: 48vh;
-">
-
-      <div class='container col-12'>
-        <h5 class='Gray_2 SubTitle_1'>Our Partners </h5>
-        <h3 class='Gray_1 Title_1'>CN.AI의 성장과 함께하는 파트너사</h3>
       </div>
-
-      <div class="simply-scroll simply-scroll-container" style="margin-top: 16vh">
-        <div class="simply-scroll-clip">
-          <ul id="scrollerTop" class="simply-scroll-list">
-            {% for i in range(1,12) %}            
-            <li><img src="img/home/partnerLogo/1/{{ i }}.png" alt="cnai"></li>            
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-
-      <div class="simply-scroll simply-scroll-container">
-        <div class="simply-scroll-clip">
-          <ul id="scrollerBottom" class="simply-scroll-list">
-            {% for i in range(12,22) %}            
-            <li><img src="img/home/partnerLogo/2/{{ i }}.png" alt="cnai"></li>            
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-
-
     </section>
+
+
+    <section class="ourUseCases">
+      <div class="subTitle_1 Gray_3" style='margin-top: 30vh;'>
+        Our Use Cases
+      </div>
+      <p class=' Title_2 my-4 pb-4 Gray_1'>
+        데이터 합성 솔루션이 가져올 변화
+      </p>
   </div>
 
 
-  {% endblock %}
+
+  <div class="swiper mySwiper" style="
+        height: 70vh;
+    ">
+    <div class="swiper-wrapper">
+
+      {% set say1 = [{ title: "Medical 의료 분야.", title2: "일반적으로 구하기 어려운 희귀 병변 데이터를 생성하고 정밀하게 탐지합니다.",
+      description: "개인 민감정보 활용 이슈에서 자유로운 의료 합성데이터를 만듭니다.
+      합성데이터는 학습 데이터의 부족 문제를 해결해 AI 진단의 정확도를 높입니다." },
+      { title: "AI Human 가상 인간.", title2: "AI Human을 통해 가치를 전달하고, 언택트 시대의 소통을 혁신합니다.",
+      description: "고도화된 영상/음성 합성기술로 실제 인간과
+      구분할 수 없는 수준의 가상인간을 만듭니다." } ,
+      {title: "Automotive 자율주행", title2: "보다 현실에 가까운 학습데이터로
+      자율주행의 안전성을 높입니다. ", description: "도로/주차 운전 시, 일상에서 수집하기 어려운
+      여러 상황을 학습데이터로 만듭니다."}]
+      %}
+      {% for item in say1 %}
+      <div class="swiper-slide ">
+        <div class="row gx-0 justify-content-between"
+          style="background: linear-gradient(96.66deg, rgba(255, 255, 255, 0) -8.55%, rgba(255, 255, 255, 0.8) 159.35%), #5A54F5;">
+          <div class="col-md-3 col-12 Gray_5 offset-md-2" style='
+            
+          '>
+            <p class="Body_1  mt-5 ">{{ item.title }}</p>
+            <p class="Title_2 ">{{ item.title2 }} </p>
+            <p class="Body_1 ">{{ item.description }}</p>
+          </div>
+          <div class="col-md-5 col-12 mt-3 mt-md-0">
+            <img src="/img/home/{{ loop.index }}.png" class="img-fluid w-100" alt="...">
+          </div>
+        </div>
+      </div>
+
+      {% endfor %}
+
+    </div>
+    <div class="swiper-pagination position-absolute start-50 translate-middle-x Label Gray_1" style="bottom:7vh;">
+    </div>
+  </div>
+  
 
 
-  {% block title %}CN.AI의 솔루션에 대한 상담이 필요하다면 {% endblock %}
-  {% block btn %} CONTACT US {% endblock %}
-
-
-  {% block localScript %}
-  <script>
-
-    $("#goDown").click(function () {
-      $('html, body').animate({
-        scrollTop: $("#tech").offset().top - 200
-      },
-        'fast');
-    });
 
 
 
-    // fix menu when passed
+  <section id='partners' style="
+    margin-top: 48vh;
+">
+
+    <div class='container col-12'>
+      <h5 class='Gray_2 SubTitle_1'>Our Partners </h5>
+      <h3 class='Gray_1 Title_1'>CN.AI의 성장과 함께하는 파트너사</h3>
+    </div>
+
+    <div class="simply-scroll simply-scroll-container" style="margin-top: 16vh">
+      <div class="simply-scroll-clip">
+        <ul id="scrollerTop" class="simply-scroll-list">
+          {% for i in range(1,12) %}
+          <li><img src="img/home/partnerLogo/1/{{ i }}.png" alt="cnai"></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+
+    <div class="simply-scroll simply-scroll-container">
+      <div class="simply-scroll-clip">
+        <ul id="scrollerBottom" class="simply-scroll-list">
+          {% for i in range(12,22) %}
+          <li><img src="img/home/partnerLogo/2/{{ i }}.png" alt="cnai"></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </section>
+</div>
 
 
-    var swiper = new Swiper(".mySwiper", {
-      pagination: {
-        el: ".swiper-pagination",
-        type: "fraction",
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-    });
-
-    $("#scrollerTop").simplyScroll({
-      customClass: "simply-scroll",
-      frameRate: 20,
-      speed: 1,
-      orientation: "horizontal",
-      auto: !0,
-      autoMode: "loop",
-      manualMode: "end",
-      direction: "forwards",
-      startOnLoad: !1,
-      initialOffset: 0
-    });
-
-    $("#scrollerBottom").simplyScroll({
-      customClass: "simply-scroll",
-      frameRate: 20,
-      speed: 1,
-      orientation: "horizontal",
-      auto: !0,
-      autoMode: "loop",
-      manualMode: "end",
-      direction: "backwards",
-      startOnLoad: !1,
-      initialOffset: 0
-    });
+{% import 'partials/footerBanner.nj' as box2 %}
+{{ box2.footerBanner(src = 'mailto:contact@cnai.ai', title = 'CN.AI의 솔루션에 대한 상담이 필요하다면', btn = 'CONTACT US') }}
 
 
-  </script>
+{% endblock %}
 
-  {% endblock %}
+
+
+{% block localScript %}
+<script>
+
+  $("#goDown").click(function () {
+    $('html, body').animate({
+      scrollTop: $("#tech").offset().top - 200
+    },
+      'fast');
+  });
+
+
+
+  // fix menu when passed
+
+
+  var swiper = new Swiper(".mySwiper", {
+    pagination: {
+      el: ".swiper-pagination",
+      type: "fraction",
+    },
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+  });
+
+  $("#scrollerTop").simplyScroll({
+    customClass: "simply-scroll",
+    frameRate: 20,
+    speed: 1,
+    orientation: "horizontal",
+    auto: !0,
+    autoMode: "loop",
+    manualMode: "end",
+    direction: "forwards",
+    startOnLoad: !1,
+    initialOffset: 0
+  });
+
+  $("#scrollerBottom").simplyScroll({
+    customClass: "simply-scroll",
+    frameRate: 20,
+    speed: 1,
+    orientation: "horizontal",
+    auto: !0,
+    autoMode: "loop",
+    manualMode: "end",
+    direction: "backwards",
+    startOnLoad: !1,
+    initialOffset: 0
+  });
+
+
+</script>
+
+{% endblock %}
