--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,16 @@
 
 /* 모바일  */
 @media only screen and (max-width: 992px) {
+
+  #mobileNav{
+    padding: 0;
+  }
+
+  .mobileMenu{
+    padding: 1rem ;
+    border-bottom: 1px solid #EEEEEE;
+  }
+
   .home-1{
     padding-left:0;
     padding-right: 0;
@@ -51,6 +61,47 @@ button.gnbBtn:hover, .gnbBtn:active{
 .ui.menu .ui.dropdown .menu>.item:hover{
   color: #f2f5f8 !important;
 }
+
+.burger {
+  display: flex;
+  outline: none;
+  /* height: 20px; */
+  width: 15px;
+  border: 0px;
+  padding: 0px;
+  background: transparent;
+  transition: all 250ms ease-out;
+  cursor: pointer;
+}
+
+.burger:before, .burger:after {
+  content: '';
+  width: 15px;
+  height: 2px;
+  position: absolute;
+  background: white;
+  transition: all 250ms ease-out;
+  will-change: transform;
+}
+
+.burger:before {
+  transform: translateY(-3px);
+}
+
+.burger:after {
+  transform: translateY(3px);
+}
+
+
+
+.active.burger:before {
+  transform: translateY(0) rotate(45deg);
+}
+
+.active.burger:after {
+  transform: translateY(0) rotate(-45deg);
+} 
+
 
 .swiper-slide {
   /* Center slide text vertically */
@@ -384,6 +435,9 @@ padding-left: 1rem; */
   color: #FAFBFC !important;
 }
 
+.bg-Gray6{
+  background: #FAFBFC !important;
+}
 
 .card{
   border-radius: 0;
