--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@ Class name automatically added to element */
   .simply-scroll {
     width: 100vw;
     height: 200px;
-    margin-bottom: 1em;
+    margin-bottom: 0;
   }
 
   /* Clip DIV */
