--- a/views/community.html
+++ b/views/community.html
@@ -42,7 +42,7 @@
   <p class='my-5 Title_1 Gray_1'>{% block e1 %}한발 빠르게 받아보는 소식 {% endblock%}</p>
   <div class="ui pointing secondary menu border-0">
     <a class="item active " data-tab="first">Recent News</a>
-    <a class="item d-none " data-tab="second">Publications</a>
+    <a class="item " data-tab="second">Publications</a>
   </div>
 
   <div class="ui bottom attached tab segment border-0" data-tab="first">
@@ -56,8 +56,7 @@
       <div id="filters" class="button-group mb-5">
         <button class="btn-blue-tab is-checked bg-transparent border-0 mx-3 px-3 is-checked px-3"
           data-filter="*">All</button>
-        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3 bg-transparent border-0 mx-3 px-3"
-          data-filter=".Investment">Investment</button>
+        <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Investment">Investment</button>
         <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".AI">AI</button>
         <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".medical">Medical</button>
         <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".syntheticData">Synthetic
