--- a/views/index.html
+++ b/views/index.html
@@ -70,6 +70,43 @@ Class name automatically added to element */
     /* width: 10vw; */
     height: 200px;
   }
+
+  .News, .Investment{
+    width: 44vh;
+    height: 18vh;
+  }
+
+  .Team{
+    width: 44vh;
+    height: 34vh;
+  }
+
+
+  .isotope {
+  background: #DDD;
+  height: 50vh; /* inherit height from body */
+}
+
+/* clear fix */
+.isotope:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .item ---- */
+
+.grid-sizer {
+  height: 30vh;
+}  
+
+/* clear fix */
+.element-item:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
 </style>
 
 <!-- The video -->
@@ -306,6 +343,50 @@ Class name automatically added to element */
   </section>
 </div>
 
+<section id = 'news'>
+  <p class = 'Title_1 Gray_1' style="margin-top: 36vh; margin-bottom: 8vh;">
+    CN.AI의 새로운 소식을 확인하세요!
+  </p>
+
+  
+  <div id="filters" class="button-group mb-5">
+    <button class="btn-blue-tab is-checked bg-transparent border-0 mx-3 px-3 is-checked px-3"
+      data-filter="*">All</button>
+    <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Investment">Investment</button>
+    <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".News">News</button>
+    <button class="btn-blue-tab bg-transparent border-0 mx-3 px-3" data-filter=".Team">Team</button>
+
+  </div>
+
+
+  <section class='isotope'   data-isotope-options='{ "layoutMode": "masonryHorizontal", "itemSelector": ".element-item", "masonryHorizontal": { "rowHeight": ".grid-sizer" } }'>
+    <div class="grid-sizer"></div>
+    {% for i in data %}
+    {% if i.name  == 'Team' %}
+    <div class  = 'card element-item {{ i.name }}' data-category = '{{ i.name }}' >
+      <img src="/img/home/team/{{i.content2}}">
+      <div class = 'card-img-overlay'>
+        <div class="card-footer bg-transparent border-0 text-white">
+          <p class='Label Gray_1'>{{ i.name }}</p>
+          <p class='Title_3 Gray_1' >{{i.title}}</p>
+        </div>
+      </div>
+    </div>
+  
+    {% else %}
+
+    <a href = '{{ i.content }}' class = 'element-item {{ i.name }} card' data-category = '{{ i.name }}' target = '_blank'>
+      <p class='Label Gray_1'>{{i.name}}</p>
+    
+      <p class='Title_3 Gray_1' >{{i.title}}</p>
+
+    </a>
+    {% endif %}
+
+    {% endfor %}        
+  </section>
+
+</section>
 
 {% import 'partials/footerBanner.nj' as box2 %}
 {{ box2.footerBanner(src = 'mailto:contact@cnai.ai', title = 'CN.AI의 솔루션에 대한 상담이 필요하다면', btn = 'CONTACT US') }}
@@ -316,7 +397,70 @@ Class name automatically added to element */
 
 
 {% block localScript %}
+<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+<script src="//npmcdn.com/isotope-masonry-horizontal@2/masonry-horizontal.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/6.0.0/shuffle.min.js"></script>
 <script>
+ // init Isotope
+
+ var $container = $('.isotope').isotope({
+    itemSelector: '.element-item',
+  //   layoutMode: 'masonryHorizontal',
+  //   masonryHorizontal: {
+  //   rowHeight: $('.element-item')[0]*2
+  //   // 110
+  // },
+  
+    getSortData: {
+      name: '.name',
+      symbol: '.symbol',
+      number: '.number parseInt',
+      category: '[data-category]',
+      weight: function (itemElem) {
+        var weight = $(itemElem).find('.weight').text();
+        return parseFloat(weight.replace(/[\(\)]/g, ''));
+      }
+    }
+  });
+  // var isHorizontal = true;
+var $window = $( window );
+// $('.isotope').attr('data-is-horizontal');
+
+  // filter functions
+  var filterFns = {
+    ium: function () {
+      var name = $(this).find('.name').text();
+      return name.match(/ium$/);
+    }
+  };
+
+  // bind filter button click
+  $('#filters').on('click', 'button', function () {
+    var filterValue = $(this).attr('data-filter');
+    // use filterFn if matches value
+    filterValue = filterFns[filterValue] || filterValue;
+    $container.isotope({
+      filter: filterValue
+    });
+  });
+
+  // bind sort button click
+  $('#sorts').on('click', 'button', function () {
+    var sortByValue = $(this).attr('data-sort-by');
+    $container.isotope({
+      sortBy: sortByValue
+    });
+  });
+
+  // change is-checked class on buttons
+  $('.button-group').each(function (i, buttonGroup) {
+    var $buttonGroup = $(buttonGroup);
+    $buttonGroup.on('click', 'button', function () {
+      $buttonGroup.find('.is-checked').removeClass('is-checked');
+      $(this).addClass('is-checked');
+    });
+  });
+
 
   $("#goDown").click(function () {
     $('html, body').animate({
